--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,12 @@ post_install:
 
 before_deploy:
    # Install terraform
+  - curl -fSL "https://releases.hashicorp.com/terraform/0.6.15/terraform_0.6.15_linux_amd64.zip" -o terraform.zip
+  - sudo unzip terraform.zip -d /opt/terraform
+  - sudo ln -s /opt/terraform/terraform /usr/bin/terraform
+  - rm -f terraform.zip
 deploy:
    # Deploy using terraform
+  - provider: script
+    skip_cleanup: true
+    script: "./deploy.sh"
