--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ before_deploy:
   - rm -f terraform.zip
 deploy:
    # Deploy using terraform
-  - terraform plan
-  - terraform apply
+  - provider: script
+    skip_cleanup: true
+    script: "./deploy.sh"
